	* gameclk.cc, cheat_screen.cc: Reverted previous fix and submited the correct
	  one: forcing palette to apply when it is directly set.
	* actors.cc: Fixed recent invisibility palette bug for avatar. Fixed mixing
	  of rings and gloves in BG due to faulty condition check, and did a
	  preventive fix for a similar case with two-handed weapons.

2008-07-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/objs.cc: Fixed bug that could cause large creatures to attack
	  themselves with projectiles. This should also prevent other creatures from
	  attacking allies.
	* actors.cc: Avatar should render correctly when invisible again.
	* cheat_screen.cc: Fixing palette mix-up with cheat screen (thanks to
	  Malignant Manor).
	* gumps/Sign_gump.cc: Fixed font for tombstones Also, moved combat toggle
	  button up 3 pixels to prevent overlap with halo button (both thanks to
	  Malignant Manor).

2008-07-07    <jeff@mini.nerble.net>

	* objs/objs.cc: Fixed delta_wrap_check, so dragons attack better.

	* combat.cc (Combat): Fixed problem with invisible monsters not
	attacking.

2008-07-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	actors.*, actions.*: Put some deleted actor actions into queue to prevent
	bug #1980431.

2008-07-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* monsters.cc: Fixing incorrect initial monster stat generation.
	* schedule.cc: No longer refer to class variables after possible schedule
	  change. Also, remove possible double-deletion on scripted schedule.
	* gamewin.cc, gumps/Notebook_gump.h: Read in notebook when loading a saved
	  game (prevents data loss if notebook is not manually opened before saving
	  since last reload).
	* actors.*: Fixed cache-out crash in areas with dead bodies (bug #1998960).

2008-06-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/monstinf.cc: fixed undefined experience value

2008-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>